[package]
name = "ufo2fontir"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Converts UFO or UFO+designspace to font ir for compilation."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
fontir = { version = "0.0.1", path = "../fontir" }

norad = "0.8.0"
kurbo = { version="0.9.0", features=["serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"

quick-xml = { version = "0.22.0", features = ["serialize"] }

log = "0.4"
env_logger = "0.9.0"

thiserror = "1.0.37"

plist = { version =  "1.3.1", features = ["serde"] }

ordered-float = { version = "3.4.0", features = ["serde"] }
indexmap = "1.9.2"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
tempfile = "3.3.0"
