[package]
name = "ufo2fontir"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Converts UFO or UFO+designspace to font ir for compilation."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
fontir = { version = "0.0.1", path = "../fontir" }

kurbo.workspace = true
serde.workspace = true
serde_yaml.workspace = true

log.workspace = true
env_logger.workspace = true

thiserror.workspace = true

write-fonts.workspace = true  # for ot_round

ordered-float.workspace = true
indexmap.workspace = true

chrono.workspace = true
norad.workspace = true

# unique to me!
plist = { version =  "1.3.1", features = ["serde"] }

[dev-dependencies]
diff.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
