[package]
name = "what-threads"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A compiler for fonts."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[workspace]

[dependencies]
log = "0.4"
env_logger = "0.9.0"

rayon = "1.6.0"
crossbeam-channel = "0.5.6"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
tempfile = "3.3.0"
