[package]
name = "ascii_plist_derive"
version = "0.0.1"
authors = ["Raph Levien <raph.levien@gmail.com>"]
edition = "2021"
description = "A derive macro for parsing NeXTSTEP (ASCII) plist files"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0"
