[package]
name = "plist_derive"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0"
